# yolo_face

./: .gitignore  Build.ps1  Bundle.ps1  CHANGELOG.md  Doctor.ps1  Install.ps1  Make-Binary.ps1  Make-Release.ps1  Make.ps1  freeze.txt  mise.toml  pyproject.toml  yolo_face.pth  yolo_face.py  yolo_face.spec
.github/workflows/: prepare-portable-python.yml  release.yml
Developers/: keepachangelog_com.md  yolo_ultralytics_configuration.md
Faceless/: Faceless.psd1  Faceless.psm1
Faceless/PowerShell-Module/Public/: Move-Faceless.ps1
Faceless/Public/: Move-Faceless.ps1
Powershell/YoloFace/: YoloFace.psd1  YoloFace.psm1
Setup/: Bundle-PortablePython.ps1  Make-Binary.ps1  Make-GitHubRelease.ps1  Make-Release.ps1  Release-InstallSnippet.md  Store-Binary.ps1  Sync-ReleaseBranch.ps1  Validate-Gpu.ps1  yolo_face.pth  yolo_face.spec
Stashapp/plugins/faceless/: faceless.yaml
yolo_face/: __init__.py  __main__.py
