

[project]
name = "yolo_face"
version = "0.3.4"
description = "Detect and classify face and human parts using YOLO"
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
]
[build-system]
requires = [
    "setuptools>=70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cuda = [
    "torch",
    "torchvision",
    "torchaudio",
]
dev = [
    "pyinstaller",
]

[tool.yolo-face.cuda]
index-url = "https://download.pytorch.org/whl/cu128"

[project.scripts]
yolo_face = "yolo_face:main"

[tool.setuptools]
packages = ["yolo_face"]
